# a379

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: go.yml
add/: Dockerfile  init.sql  main.go
add/go-flow/: Dockerfile  go.mod  main.go
add/go-flow/session/: libsession.h  session.go
add/ml-flow/: Dockerfile  autocompletion.py  test_all.py
app/: Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
app/src/: index.html  index.tsx
app/src/components/: Search.tsx
app/src/pages/: AnimalDetails.tsx  Animals.tsx  Auth.tsx
app/src/styles/: AnimalDetails.css  Animals.css  Auth.css
