[tool.poetry]
name = "a379"
version = "0.1.0"
description = ""
authors = ["MarkK <themaninstripesandglasses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
transformers = "^4.44.2"
torch = "^2.4.1"
uvicorn = "^0.30.6"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
